--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,9 +40,7 @@ https://github.com/elastic/beats/compare/v8.7.1\...v8.8.0[View commits]
 - Fix namespacing on self-monitoring {pull}32336[32336]
 - Fix race condition when stopping runners {pull}32433[32433]
 - Fix concurrent map writes when system/process code called from reporter code {pull}32491[32491]
-
 - Fix namespacing on self-monitoring {pull}32336[32336]
-- Fix race condition when stopping runners {pull}32433[32433]
 - Fix concurrent map writes when system/process code called from reporter code {pull}32491[32491]
 - The Elasticsearch output now splits large requests instead of dropping them when it receives a StatusRequestEntityTooLarge error. {pull}34911[34911]
 - In cases where the matcher detects a non-string type in a match statement, report the error as a debug statement, and not a warning statement. {pull}35119[35119]
@@ -54,9 +52,8 @@ https://github.com/elastic/beats/compare/v8.7.1\...v8.8.0[View commits]
 
 
 *Filebeat*
-- [Gcs Input] - Added missing locks for safe concurrency {pull}34914[34914]
+- [GCS Input] - Added missing locks for safe concurrency {pull}34914[34914]
 - Fix the ignore_inactive option being ignored in Filebeat's filestream input {pull}34770[34770]
-- Fix TestMultiEventForEOFRetryHandlerInput unit test of CometD input {pull}34903[34903]
 - Add input instance id to request trace filename for httpjson and cel inputs {pull}35024[35024]
 - Sanitize filenames for request tracer in httpjson input. {pull}35143[35143]
 - Sanitize filenames for request tracer in cel input. {pull}35154[35154]
