--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -5,7 +5,7 @@
 
 [[release-notes-8.8.0]]
 === Beats version 8.8.0
-https://github.com/elastic/beats/compare/v8.7.1\...v8.8.0[View commits]
+https://github.com/elastic/beats/compare/v8.7.1...v8.8.0[View commits]
 
 ==== Breaking changes
 
